--- a/index.html
+++ b/index.html
@@ -20,75 +20,53 @@
 			<!-- <img src="overview.jpg" width="800", height="500">-->
 			
 			<div id="option">
-				<input name="Overview"
-		    		type="button" 
-					value="Show Overview" 
-					onclick="removedat();overview()"
-				/>
+				<button onclick="removedat();overview()">
+				        Show Overview
+				    </button> 
 				<script type = "text/javascript" src="overview.js"></script>
 			</div>
 			<div id="option">
-				<input name="Viz-Cluster"
-		    		type="button" 
-					value="Show Cluster 1" 
-					onclick="removedat();runOne()"
-				/>
+				<button onclick="removedat();runOne()">
+				        Show Cluster 1
+				    </button> 
 				<script type = "text/javascript"src="cluster1.js"></script>
-		    	<input name="Viz-Cluster"
-		    		type="button" 
-					value="Show Cluster 2" 
-					onclick="removedat();runTwo()"
-				/>
+				<button onclick="removedat();runTwo()">
+				        Show Cluster 2
+				    </button>
 				<script type = "text/javascript"src="cluster2.js"></script>
-		    	<input name="Viz-Cluster"
-		    		type="button" 
-					value="Show Cluster 3" 
-					onclick="removedat();runThree()"
-				/>
+				<button onclick="removedat();runThree()">
+				        Show Cluster 3
+				    </button>
 				<script type = "text/javascript"src="cluster3.js"></script>
-		    	<input name="Viz-Cluster"
-		    		type="button" 
-					value="Show Cluster 4" 
-					onclick="removedat();runFour()"
-				/>
+				<button onclick="removedat();runFour()">
+				        Show Cluster 4
+				    </button>
 				<script type = "text/javascript"src="cluster4.js"></script>
-		    	<input name="Viz-Cluster"
-		    		type="button" 
-					value="Show Cluster 5" 
-					onclick="removedat();runFive()"
-				/>
+				<button onclick="removedat();runFive()">
+				        Show Cluster 5
+				    </button>
+				<script type = "text/javascript"src="cluster5.js"></script>
 			</div>
 				<div id="option">
-				<script type = "text/javascript"src="cluster5.js"></script>
-		    	<input name="City"
-		    		type="button" 
-					value="Show Cluster 1 City" 
-					onclick="removedat();runCOne()"
-				/>
+				<button onclick="removedat();runCOne()">
+				        Show Cluster 1 City
+				    </button>
 				<script type = "text/javascript"src="city1.js"></script>
-		    	<input name="City"
-		    		type="button" 
-					value="Show Cluster 2 City" 
-					onclick="removedat();runCTwo()"
-				/>
+				<button onclick="removedat();runCTwo()">
+				        Show Cluster 2 City
+				    </button>
 				<script type = "text/javascript"src="city2.js"></script>
-		    	<input name="City"
-		    		type="button" 
-					value="Show Cluster 3 City" 
-					onclick="removedat();runCThree()"
-				/>
+				<button onclick="removedat();runCThree()">
+				        Show Cluster 3 City
+				    </button>
 				<script type = "text/javascript"src="city3.js"></script>
-		    	<input name="City"
-		    		type="button" 
-					value="Show Cluster 4 City" 
-					onclick="removedat();runCFour()"
-				/>
+				<button onclick="removedat();runCFour()">
+				        Show Cluster 4 City
+				    </button>
 				<script type = "text/javascript"src="city4.js"></script>
-		    	<input name="City"
-		    		type="button" 
-					value="Show Cluster 5 City" 
-					onclick="removedat();runCFive()"
-				/>
+				<button onclick="removedat();runCFive()">
+				        Show Cluster 5 City
+				    </button>
 				<script type = "text/javascript"src="city5.js"></script>
 			</div>
 		
