--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<!-- <img src="overview.jpg" width="800", height="500">-->
 			
 			<div id="option">
-				<button onclick="removedat();overview()">
+				<button onclick="removedat();overview();map();">
 				        Show Overview
 				    </button> 
 				<script type = "text/javascript" src="overview.js"></script>
@@ -30,6 +30,7 @@
 				        Show Cluster 1
 				    </button> 
 				<script type = "text/javascript"src="cluster1.js"></script>
+				<script type = "text/javascript"src="map.js"></script>
 				<button onclick="removedat();runTwo()">
 				        Show Cluster 2
 				    </button>
