--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<title>Trend Chart (Area + Line)</title>
 		<link rel="stylesheet" type"text/css" href="app.css">
 		<script type = "text/javascript" src="js/d3.v3.js"></script>
+		<script type = "text/javascript" src="topojson.v0.min.js"></script>	
 	</head>
 
 	<body>
