Update with map, remove overview

--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
 			<!-- <img src="overview.jpg" width="800", height="500">-->
 			
 			<div id="option">
-				<button onclick="removedat();overview();map();">
+				<button onclick="removedat();map();">
 				        Show Overview
 				    </button> 
 				<script type = "text/javascript" src="overview.js"></script>
+				<script type = "text/javascript"src="map.js"></script>
 			</div>
 			<div id="option">
 				<button onclick="removedat();runOne()">
 				        Show Cluster 1
 				    </button> 
 				<script type = "text/javascript"src="cluster1.js"></script>
-				<script type = "text/javascript"src="map.js"></script>
 				<button onclick="removedat();runTwo()">
 				        Show Cluster 2
 				    </button>
