--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
 		<link rel="stylesheet" type"text/css" href="app.css">
 		<script type = "text/javascript" src="js/d3.v3.js"></script>
 		<script type = "text/javascript" src="topojson.v0.min.js"></script>
-		 <script type="text/javascript" src="./src/html-table-of-contents.js"></script>
-        	
+			
 	</head>
 
-	<body onload="htmlTableOfContents();">
-		<script>	
+	<body>
+		<script>
 		function removedat() {
 			d3.selectAll("svg")
 				.remove();
@@ -21,18 +20,6 @@
 			<p>Energy demand from various cities around the world are grouped according to the similarity of their annual demand.</p>
 			
 			<!-- <img src="overview.jpg" width="800", height="500">-->
-			
-	        <h1>
-	            top heading 1
-	        </h1>
-
-	        <h2>
-	            second heading
-	        </h2>
-
-	        <h1>
-	            top heading 2
-	        </h1>
 			
 			<div id="option">
 				<button onclick="removedat();map();">
