--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
 		<link rel="stylesheet" type"text/css" href="app.css">
 		<script type = "text/javascript" src="js/d3.v3.js"></script>
 		<script type = "text/javascript" src="topojson.v0.min.js"></script>
-			
+		        <script src="./src/html-table-of-contents.js"
+		              type="text/javascript">
+		</script>	
 	</head>
 
-	<body>
+	<body onload="htmlTableOfContents();">
 		<script>
 		function removedat() {
 			d3.selectAll("svg")
