--- a/index.html
+++ b/index.html
@@ -12,6 +12,24 @@
 	</head>
 
 	<body onload="htmlTableOfContents();">
+        <p>
+            <b>Contents</b>
+        </p>
+
+        <div id="toc">
+        </div>
+
+        <h1>
+            top heading 1
+        </h1>
+
+        <h2>
+            second heading
+        </h2>
+
+        <h1>
+            top heading 2
+        </h1>
 		<script>
 		function removedat() {
 			d3.selectAll("svg")
