--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
         </div>
 
         <h1>
-            top heading 1
+            Multi-City Energy Cluster and Prediction Visualization
         </h1>
+		<p>Energy demand from various cities around the world are grouped according to the similarity of their annual demand.</p>
 
         <h2>
             second heading
@@ -36,8 +37,6 @@
 				.remove();
 			};
 		</script>
-			<h2>Multi-City Energy Cluster and Prediction Visualization</h2>
-			<p>Energy demand from various cities around the world are grouped according to the similarity of their annual demand.</p>
 			
 			<!-- <img src="overview.jpg" width="800", height="500">-->
 			
