--- a/index.html
+++ b/index.html
@@ -27,56 +27,6 @@
         <h2>
             second heading
         </h2>
-		
-		
-			<button onclick="removedat();map();">
-			        Show Overview
-			    </button> 
-			<script type = "text/javascript" src="overview.js"></script>
-			<script type = "text/javascript"src="map.js"></script>
-		
-			<button onclick="removedat();runOne()">
-			        Show Cluster 1
-			    </button> 
-			<script type = "text/javascript"src="cluster1.js"></script>
-			<button onclick="removedat();runTwo()">
-			        Show Cluster 2
-			    </button>
-			<script type = "text/javascript"src="cluster2.js"></script>
-			<button onclick="removedat();runThree()">
-			        Show Cluster 3
-			    </button>
-			<script type = "text/javascript"src="cluster3.js"></script>
-			<button onclick="removedat();runFour()">
-			        Show Cluster 4
-			    </button>
-			<script type = "text/javascript"src="cluster4.js"></script>
-			<button onclick="removedat();runFive()">
-			        Show Cluster 5
-			    </button>
-			<script type = "text/javascript"src="cluster5.js"></script>
-			<div id="option">
-			<button onclick="removedat();runCOne()">
-			        Show Cluster 1 City
-			    </button>
-			<script type = "text/javascript"src="city1.js"></script>
-			<button onclick="removedat();runCTwo()">
-			        Show Cluster 2 City
-			    </button>
-			<script type = "text/javascript"src="city2.js"></script>
-			<button onclick="removedat();runCThree()">
-			        Show Cluster 3 City
-			    </button>
-			<script type = "text/javascript"src="city3.js"></script>
-			<button onclick="removedat();runCFour()">
-			        Show Cluster 4 City
-			    </button>
-			<script type = "text/javascript"src="city4.js"></script>
-			<button onclick="removedat();runCFive()">
-			        Show Cluster 5 City
-			    </button>
-			<script type = "text/javascript"src="city5.js"></script>
-
 
         <h1>
             top heading 2
@@ -89,6 +39,58 @@
 		</script>
 			
 			<!-- <img src="overview.jpg" width="800", height="500">-->
+			
+			<div id="option">
+				<button onclick="removedat();map();">
+				        Show Overview
+				    </button> 
+				<script type = "text/javascript" src="overview.js"></script>
+				<script type = "text/javascript"src="map.js"></script>
+			</div>
+			<div id="option">
+				<button onclick="removedat();runOne()">
+				        Show Cluster 1
+				    </button> 
+				<script type = "text/javascript"src="cluster1.js"></script>
+				<button onclick="removedat();runTwo()">
+				        Show Cluster 2
+				    </button>
+				<script type = "text/javascript"src="cluster2.js"></script>
+				<button onclick="removedat();runThree()">
+				        Show Cluster 3
+				    </button>
+				<script type = "text/javascript"src="cluster3.js"></script>
+				<button onclick="removedat();runFour()">
+				        Show Cluster 4
+				    </button>
+				<script type = "text/javascript"src="cluster4.js"></script>
+				<button onclick="removedat();runFive()">
+				        Show Cluster 5
+				    </button>
+				<script type = "text/javascript"src="cluster5.js"></script>
+			</div>
+				<div id="option">
+				<button onclick="removedat();runCOne()">
+				        Show Cluster 1 City
+				    </button>
+				<script type = "text/javascript"src="city1.js"></script>
+				<button onclick="removedat();runCTwo()">
+				        Show Cluster 2 City
+				    </button>
+				<script type = "text/javascript"src="city2.js"></script>
+				<button onclick="removedat();runCThree()">
+				        Show Cluster 3 City
+				    </button>
+				<script type = "text/javascript"src="city3.js"></script>
+				<button onclick="removedat();runCFour()">
+				        Show Cluster 4 City
+				    </button>
+				<script type = "text/javascript"src="city4.js"></script>
+				<button onclick="removedat();runCFive()">
+				        Show Cluster 5 City
+				    </button>
+				<script type = "text/javascript"src="city5.js"></script>
+			</div>
 		
 	</body>
 </html>
