--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <pre><code>YiQian Jin, Denis Tan, Jing Ye
 </code></pre>
 
-<h2>MOTIVATION</h2>
+<h2>Motivation</h2>
 
 <p>Global energy demand is rising fast (USEIA, 2013), with cities absorbing most of the predicted demand expansion (The New Climate Economy, 2014). More specifically, much of the growth in energy demand will come from the growth of the middle class in emerging cities and economies. Each of these new middle-class individuals will make decentralized energy consumption decisions on a daily basis, with significant consequences for the aggregate consumption. Provision of information on energy demand may alter energy consumption decisions. Hence, there is tremendous value in understanding, projecting, and presenting information on  short-term energy demand forecasts.</p>
 
