--- a/index.html
+++ b/index.html
@@ -282,9 +282,8 @@ Figure 16: Holt-Winters forecast for Sacramento (Cluster 4)</p>
 			<!-- <img src="overview.jpg" width="800", height="500">-->
 			
         <h1>
-            Multi-City Energy Cluster and Prediction Visualization
+            Visualization
         </h1>
-		<p>Energy demand from various cities around the world are grouped according to the similarity of their annual demand.</p>
 		
 			<div id="option">
 				<button onclick="removedat();map();">
