--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@ Figure 16: Holt-Winters forecast for Sacramento (Cluster 4)</p>
         </h1>
 		
 			<div id="option">
-				<button onclick="removedat();map()"; href="http://denistanwh.github.io/#toc18";>
+				<button href="http://denistanwh.github.io/#toc18" onclick="removedat();map();">
 				        Show Overview
 				    </button> 
 				<script type = "text/javascript" src="overview.js"></script>
