--- a/index.html
+++ b/index.html
@@ -293,45 +293,45 @@ Figure 16: Holt-Winters forecast for Sacramento (Cluster 4)</p>
 				<script type = "text/javascript"src="map.js"></script>
 			</div>
 			<div id="option">
-				<button onclick="removedat();runOne()">
+				<button href="http://denistanwh.github.io/#toc18" onclick="removedat();runOne()">
 				        Show Cluster 1
 				    </button> 
 				<script type = "text/javascript"src="cluster1.js"></script>
-				<button onclick="removedat();runTwo()">
+				<button href="http://denistanwh.github.io/#toc18" onclick="removedat();runTwo()">
 				        Show Cluster 2
 				    </button>
 				<script type = "text/javascript"src="cluster2.js"></script>
-				<button onclick="removedat();runThree()">
+				<button href="http://denistanwh.github.io/#toc18" onclick="removedat();runThree()">
 				        Show Cluster 3
 				    </button>
 				<script type = "text/javascript"src="cluster3.js"></script>
-				<button onclick="removedat();runFour()">
+				<button href="http://denistanwh.github.io/#toc18" onclick="removedat();runFour()">
 				        Show Cluster 4
 				    </button>
 				<script type = "text/javascript"src="cluster4.js"></script>
-				<button onclick="removedat();runFive()">
+				<button href="http://denistanwh.github.io/#toc18" onclick="removedat();runFive()">
 				        Show Cluster 5
 				    </button>
 				<script type = "text/javascript"src="cluster5.js"></script>
 			</div>
 				<div id="option">
-				<button onclick="removedat();runCOne()">
+				<button href="http://denistanwh.github.io/#toc18" onclick="removedat();runCOne()">
 				        Show Cluster 1 City
 				    </button>
 				<script type = "text/javascript"src="city1.js"></script>
-				<button onclick="removedat();runCTwo()">
+				<button href="http://denistanwh.github.io/#toc18" onclick="removedat();runCTwo()">
 				        Show Cluster 2 City
 				    </button>
 				<script type = "text/javascript"src="city2.js"></script>
-				<button onclick="removedat();runCThree()">
+				<button href="http://denistanwh.github.io/#toc18" onclick="removedat();runCThree()">
 				        Show Cluster 3 City
 				    </button>
 				<script type = "text/javascript"src="city3.js"></script>
-				<button onclick="removedat();runCFour()">
+				<button href="http://denistanwh.github.io/#toc18" onclick="removedat();runCFour()">
 				        Show Cluster 4 City
 				    </button>
 				<script type = "text/javascript"src="city4.js"></script>
-				<button onclick="removedat();runCFive()">
+				<button href="http://denistanwh.github.io/#toc18" onclick="removedat();runCFive()">
 				        Show Cluster 5 City
 				    </button>
 				<script type = "text/javascript"src="city5.js"></script>
