--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
 	</head>
 
 	<body onload="htmlTableOfContents();">
-        <h1>
-            <b>Contents</b>
-		</h1>
+        <p>
+            <b><font size="20">Contents</font></b>
+			<br>
+		</p>
 
         <div id="toc">
         </div>
