--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-		<title>Trend Chart (Area + Line)</title>
+		<title>Multi-City Energy Analysis</title>
 		<link rel="stylesheet" type"text/css" href="app.css">
 		<script type = "text/javascript" src="js/d3.v3.js"></script>
 		<script type = "text/javascript" src="topojson.v0.min.js"></script>
@@ -14,6 +14,7 @@
 
 	<body onload="htmlTableOfContents();">
         <p>
+			<br>
             <b><font size="20">Contents</font></b>
 		</p>
 
@@ -21,9 +22,10 @@
         </div>
 <br>
 <h1>Multi-City Energy Analysis</h1>
+<p>YiQian Jin, Denis Tan, Jing Ye</p>
 
-<pre><code>YiQian Jin, Denis Tan, Jing Ye
-</code></pre>
+<!--><pre><code>
+</code></pre>-->
 
 <h2>Motivation</h2>
 
@@ -281,9 +283,9 @@ Figure 16: Holt-Winters forecast for Sacramento (Cluster 4)</p>
 			
 			<!-- <img src="overview.jpg" width="800", height="500">-->
 			
-        <h1>
+        <h2>
             Visualization
-        </h1>
+        </h2>
 		
 			<div id="option">
 				<button href="http://denistanwh.github.io/#toc18" onclick="removedat();map();">
