--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
 <h1>Multi-City Energy Analysis</h1>
 <p>YiQian Jin, Denis Tan, Jing Ye</p>
 
-<!--><pre><code>
-</code></pre>-->
+<!--<pre><code></code></pre>-->
 
 <h2>Motivation</h2>
 
