--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         <p>
 			<br>
             <b><font size="20">Multi-City Energy Analysis</font></b>
-			<p>YiQian Jin, Denis Tan, Jing Ye</p>
+			<b><font size="14">YiQian Jin, Denis Tan, Jing Ye</font></b>
+			<font size="14">May 11, 2015</font>
 		</p>
 
         <div id="toc">
