--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
         <p>
 			<br>
             <b><font size="20">Multi-City Energy Analysis</font></b>
-			<b><font size="14">YiQian Jin, Denis Tan, Jing Ye</font></b>
+			<br>
+			<font size="14">YiQian Jin, Denis Tan, Jing Ye</font>
+			<br>
 			<font size="14">May 11, 2015</font>
 		</p>
 
