--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 			<br>
             <b><font size="20">Multi-City Energy Analysis</font></b>
 			<br>
-			<font size="10">YiQian Jin, Denis Tan, Jing Ye</font>
+			YiQian Jin, Denis Tan, Jing Ye
 			<br>
-			<font size="10">May 11, 2015</font>
+			May 11, 2015
 		</p>
 
         <div id="toc">
