--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 		<script type = "text/javascript" src="topojson.v0.min.js"></script>
 		        <script src="./src/html-table-of-contents.js"
 		              type="text/javascript">
-		</script>	
+		</script>
+		<script type="text/javascript" src="./tooltip.js"></script>
 	</head>
 
 	<body onload="htmlTableOfContents();">
